Server/esp_server/build/log/idf_py_stderr_output_54593
Command: make -j 10 all
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_delete':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:248:17: error: passing argument 1 of 'remove' from incompatible pointer type [-Wincompatible-pointer-types]
  248 |     if (!remove(file) == 0) {
      |                 ^~~~
      |                 |
      |                 FILE *
In file included from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/newlib/platform_include/stdio.h:10,
                 from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:1:
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:252:17: note: expected 'const char *' but argument is of type 'FILE *'
  252 | int     remove (const char *);
      |                 ^~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:245:9: warning: unused variable 'client_socket' [-Wunused-variable]
  245 |     int client_socket = params->client_socket;
      |         ^~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:99:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   99 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:43:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   43 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   42 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
